--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-env": "7.5.0",
     "@babel/preset-react": "7.0.0",
     "@babel/runtime": "7.5.0",
+    "axios": "^0.21.1",
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.4",
     "css-loader": "^5.0.0",
