--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.4",
     "css-loader": "^5.0.0",
+    "dotenv": "^8.2.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "4.3.0",
@@ -21,6 +22,7 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "1.7.0",
+    "firebase": "^8.2.7",
     "prettier": "1.19.1",
     "regenerator-runtime": "0.13.2",
     "terser-webpack-plugin": "^5.0.3",
@@ -40,7 +42,9 @@
     "bootstrap": "^4.5.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
+    "dotenv-webpack": "^6.0.0",
     "file-loader": "^6.2.0",
+    "fs": "0.0.1-security",
     "mini-css-extract-plugin": "^1.2.1",
     "postcss-loader": "^4.0.4",
     "prop-types": "15.7.2",
